# exoplanet

./: .coveragerc  .envrc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .ycm_extra_conf.py  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  bench.py  debug.py  environment.yml  index.rst  k2-24.ipynb  metadata.yaml  multi.ipynb  multi.py  noxfile.py  paper.md  paper.tex  pimen.ipynb  pymc.ipynb  pymc_demo.py  pyproject.toml  pytest.ini  readthedocs.yml  release.md  requirements-dev.txt  requirements-test.txt  requirements.txt  (+6 more)
.ci/: batman-patch.diff  build-docs.sh  build-docs.yml  build-paper.sh  build-paper.yml  run-tests.yml  run-tutorials.yml  travis.sh  travis.yml  update_docs.sh
.ci/azure/: activate_conda.sh  build_docs.sh  run_tutorials.py  run_tutorials.sh  setup_conda.sh  update_versions.py
.ci/travis/: check_style.sh  update_docs.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codestyle.yml  joss.yml  style.yml  tests.yml  tutorials.yml  wheels.yml  windows.yml  windows.yml.disabled
binder/: requirements.txt
docs/: .gitignore  Makefile  auto_environment.yml  conf.py  environment.yml  fix_internal_links.py  index.rst  requirements.txt  run_notebooks.py  run_notebooks.sh
docs/_static/: exoplanet.css
docs/notebooks/: LightTravelDelay.ipynb  astrometric-rv.ipynb  astrometric.ipynb  citation.ipynb  citation.py  gp.ipynb  gp.py  interp.ipynb  intro-to-pymc3.ipynb  intro-to-pymc3.py  light-delay.py  notebook_setup.py  pymc3-extras.ipynb  rv.ipynb  rv.py  stellar-variability.ipynb  tess.ipynb  tesscut.ipynb  together.ipynb  transit.ipynb  ttv.ipynb
docs/tutorials/: about.md  astrometric.md  astrometric.py  autodiff.md  citation.md  citation.py  data-and-models.md  gp.rst  intro-to-pymc.md  intro-to-pymc3.md  intro-to-pymc3.py  ipython_kernel_config.py  light-delay.md  light-delay.py  notebook_setup.py  pymc3-extras.py  reparameterization.md  rv.md  rv.py  stellar-variability.rst  tess.rst  together.rst  transit.md  transit.py  ttv.rst  tutorial_rst.tpl  why.md
docs/user/: api.rst  dev.rst  install.rst  multiprocessing.rst  theano.rst  what.rst
exoplanet/: __init__.py  citations.py  citations_test.py  conftest.py  cpp_extension.py  distributions.py  distributions_test.py  estimators.py  estimators_test.py  exoplanet_version.py  interp.py  kepler.py  kepler_test.py  light_curve.py  light_curve_test.py  light_curves.py  light_curves_test.py  quadpotential.py  quadpotential_test.py  sampling.py  sampling_test.py  tf_utils.py  transforms.py  transit.py  transit_test.py  tri_diag_solve.py  tri_diag_solve_test.py  units.py  utils.py
joss/: metadata.yaml  paper.bib  paper.md
paper/: .gitignore  Makefile  aastex62.cls  exoplanet.bib  exoplanet.tex  gen_links.py  gitlinks.tex  ms.tex  requirements.txt  xostyle.tex
papers/: .gitignore
src/: transit_kernel.cc.cu
tests/: citations_test.py  conftest.py  distributions_test.py  estimators_test.py  gp_test.py  interp_test.py  light_curves_test.py  optim_test.py  quadpotential_test.py  sampling_test.py  units_test.py  utils_test.py
user/: dev.rst
(+421 files in other folders)
