[build-system]
requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
skip_glob = ["docs/tutorials/*.py"]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["astropy", "corner", "jupytext", "matplotlib", "nbconvert", "nbformat", "numpy", "packaging", "pandas", "pkg_resources", "pymc3", "pytest", "requests", "scipy", "setuptools", "sphinx_typlog_theme", "theano"]

[tool.coverage.run]
# relative_files = true
parallel = true
branch = true
source = ["exoplanet"]
omit = [
  "*_test.py",
  "*__init__*",
  "src/exoplanet/gp.py",
  "src/exoplanet/optim.py",
  "src/exoplanet/interp.py",
  "src/exoplanet/sampling.py",
  "src/exoplanet/orbits/constants.py",
  "src/exoplanet/light_curves/integrated.py",
  "src/exoplanet/light_curves/interpolated.py",
  "src/exoplanet/theano_ops/build_utils.py",
  "src/exoplanet/theano_ops/interp/*"
]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "raise NotImplementedError",
  "except ImportError",
  "pragma: no cover",
  "def R_op",
  "if verbose"
]
